--- a/_config.yml
+++ b/_config.yml
@@ -1,3 +1,3 @@
 title: Ben Tan Kiang Thong
-logo: /Profile pic 2023 - Cropped.jpg
+logo: Profile pic 2023 - Cropped.jpg
 theme: jekyll-theme-Modernist
