--- a/_config.yml
+++ b/_config.yml
@@ -1,3 +1,4 @@
 title: Ben Tan Kiang Thong
 logo: Profile pic 2023 - Cropped.jpg
-theme: jekyll-theme-Modernist
+description: This is how I look like and where this description will be 
+theme: jekyll-theme-Minima
