--- a/_config.yml
+++ b/_config.yml
@@ -1,4 +1,4 @@
 title: Ben Tan Kiang Thong
 logo: Profile pic 2023 - Cropped.jpg
 description: This is how I look like and where this description will be 
-theme: jekyll-theme-Minima
+theme: jekyll-theme-Slate
