--- a/_config.yml
+++ b/_config.yml
@@ -1,4 +1,4 @@
 title: Ben Tan Kiang Thong
-logo: assets/img/Circular Profile Pic 2023.png
+logo: assets/img/Circular Profile pic 2023.png
 description: This is how I look like and where this description will be 
 theme: jekyll-theme-Minimal
