--- a/_config.yml
+++ b/_config.yml
@@ -1,4 +1,9 @@
 title: Ben Tan Kiang Thong
 logo: assets/img/Circular Profile pic 2023.png
-description: This is how I look like and where this description will be 
+description: >
+  Hi there, I'm Ben.
+  <br><br>
+  An engineer, scientist and project manager all in one. 
+  <br><br>
+  With a passion in leveraging data to make drive insights and solve complex problems, I am diving deep into the world of data science.
 theme: jekyll-theme-tactile
