--- a/_config.yml
+++ b/_config.yml
@@ -6,4 +6,5 @@ description: >
   An engineer, scientist and project manager all in one. 
   <br><br>
   With a passion in leveraging data to make drive insights and solve complex problems, I am diving deep into the world of data science.
+show_downloads: true
 theme: jekyll-theme-minimal
