--- a/_config.yml
+++ b/_config.yml
@@ -6,5 +6,7 @@ description: >
   An engineer, scientist and project manager all in one. 
   <br><br>
   With a passion in leveraging data to make drive insights and solve complex problems, I am diving deep into the world of data science.
+  <br><br>
+  [Visit my Tableau Profile](https://public.tableau.com/app/profile/ben.tan2827/vizzes)
 show_downloads: true
 theme: jekyll-theme-minimal
