--- a/_config.yml
+++ b/_config.yml
@@ -5,6 +5,6 @@ description: >
   <br><br>
   An engineer, scientist and project manager all in one. 
   <br><br>
-  With a passion in leveraging data to draw insights and solve complex problems, I strive to help corporates make informed decisions.
+  With a passion in leveraging data to draw insights and solve complex problems, I help corporates and individuals make informed decisions.
 show_downloads: true
 theme: jekyll-theme-minimal
